addition classes created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/user
 spring.datasource.username=postgres
 spring.datasource.password=dfltpwd
 spring.jpa.generate-ddl=true
-file.upload-dir=\\C:\\uploadFolder
+file.upload-dir=/C:/uploadFolder
 spring.http.multipart.max-file-size=500000KB
 spring.http.multipart.max-request-size=500000KB
 spring.mustache.expose-request-attributes=true
