deleted unused arguments and code documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
+# путь к базе
 spring.datasource.url=jdbc:postgresql://localhost:5432/user
+# логин
 spring.datasource.username=postgres
+# пароль
 spring.datasource.password=dfltpwd
+# создание таблиц из сущностей
 spring.jpa.generate-ddl=true
-file.upload-dir=/C:/uploadFolder
-spring.http.multipart.max-file-size=500000KB
-spring.http.multipart.max-request-size=500000KB
-spring.mustache.expose-request-attributes=true
 
